# Claude-Plugin-MCP

./: .gitignore  .mcp.json  CONTRIBUTING.md  DISCLAIMER.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: plugin.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
Tests/: e2e_round1_buyer.docx  e2e_round2_seller.docx  e2e_round3_buyer.docx
claude-v-claude/: round1_buyer.docx  round2_seller.docx  sales_agreement_v1.docx
commands/negotiate/: SKILL.md
commands/setup-negotiation/: SKILL.md
defaults/: AUTHORITY.md  PERSONA.md  PLAYBOOK-template.md
samples/: clean_sales_agreement.docx  redlined_sales_agreement.docx
scripts/: start-mcp.sh
skills/negotiate-contract/: SKILL.md
skills/yolo-negotiation/: SKILL.md
src/: __init__.py
src/anchor/: __init__.py  anchor.py  anchor_helpers.py
src/config/: __init__.py  defaults.py  loader.py  models.py  writer.py
src/ingestion/: __init__.py  annotated_extractor.py  annotated_helpers.py  author_extractor.py  clean_extractor.py  comment_loader.py  reply_attachment.py  sdt_unwrapper.py  state_of_play.py  state_of_play_helpers.py  validation.py
src/mcp_server/: __init__.py  __main__.py  action_tools.py  error_sanitizer.py  ingest_tools.py  pipeline_tool.py  redline_tool.py  styler_tools.py
src/models/: __init__.py  accept.py  author_config.py  change.py  comment.py  counter_proposal.py  edit_result.py  party.py
src/negotiation/: __init__.py  accept_changes.py  accept_changes_inplace.py  accept_helpers.py  add_comment_helpers.py  add_comments.py  timestamp.py  (+11 more)
(+35 files in other folders)
